[project]
name = "endplay"
description = "A suite of tools for generation and analysis of bridge deals"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {file = "LICENCE"}
keywords = [
    "bridge",
    "cards",
    "games",
    "double dummy",
    "dds",
    "analysis",
    "stats",
    "deal",
    "dealer"
]
authors = [
    {name = "Dominic Price", email="dominicprice@outlook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyparsing",
    "tqdm",
    "numpy>=1.16",
    "matplotlib",
    "more_itertools"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/dominicprice/endplay"
"Documentation" = "https://endplay.readthedocs.io"
"Bug Tracker" = "https://github.com/dominicprice/endplay/issues"

[project.scripts]
endplay-interact = "endplay.interact.__main__:main"
endplay-dealer = "endplay.dealer.__main__:main"

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cmake"
]
build-backend = 'setuptools.build_meta'

[tool.yapf]
based_on_style = "pep8"
column_limit = 1000
# split_all_comma_separated_values = 0
# split_before_closing_bracket = 1


[tool.flake8]
ignore = "W191"
exclude = [".git", "__pycache__", "build"]