[tool.poetry]
name = "endplay"
version = "0.5.9"
description = "A suite of tools for generation and analysis of bridge deals"
license = "MIT"
authors = ["Dominic Price <dominicprice@outlook.com>"]
readme = "README.md"
packages = [{include = "endplay", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "bridge",
    "cards",
    "games",
    "double dummy",
    "dds",
    "analysis",
    "stats",
    "deal",
    "dealer"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/dominicprice/endplay"
"Documentation" = "https://endplay.readthedocs.io"
"Bug Tracker" = "https://github.com/dominicprice/endplay/issues"

[tool.poetry.dependencies]
python = "^3.9"
pyparsing = ">=3.0"
tqdm = ">=4.65"
numpy = ">=1.26"
matplotlib = ">=2.0"
more-itertools = ">=9.0"

sphinxcontrib-apidoc = { version = "^0.5.0", optional = true }
myst-parser = { version = "^3.0.1", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
autodocsumm = { version = "^0.2.12", optional = true }
sphinx = { version = "^7.3.7", optional = true }

[tool.poetry.extras]
docs = ["sphinxcontrib-apidoc", "myst-parser", "sphinx-rtd-theme", "autodocsumm", "sphinx"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
coverage = "^7.4.3"

[tool.poetry.scripts]
endplay-interact = "endplay.interact.__main__:main"
endplay-dealer = "endplay.dealer.__main__:main"

[tool.poetry.build]
script = "build_ext.py"
generate-setup-file = true

[build-system]
requires = [
    "poetry-core",
    "setuptools>=42",
    "cmake>=3.13"
]
build-backend = "poetry.core.masonry.api"