[metadata]
name = endplay
version = attr: endplay.config.__version__
author = Dominic Price
author_email = dominicprice@outlook.com
description = A suite of tools for generation and analysis of bridge deals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/dominicprice/endplay
project_urls =
    Documentation = https://endplay.readthedocs.io
    Bug Tracker = https://gitlab.com/dominicprice/endplay/-/issues
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Games/Entertainment
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    endplay
    endplay._dds
    endplay.dds
    endplay.dealer
    endplay.dealer.actions
    endplay.evaluate
    endplay.interact
    endplay.parsers
    endplay.types
python_requires = >=3.6
