[metadata]
name = endplay
version = file: VERSION
author = Dominic Price
author_email = dominicprice@outlook.com
description = A suite of tools for generation and analysis of bridge deals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominicprice/endplay
classifiers = 
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Games/Entertainment
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = 
    bridge
    cards
    games
    double dummy
    dds
    analysis
    stats
    deal
    dealer
project_urls = 
    Documentation = https://endplay.readthedocs.io
    Bug Tracker = https://github.com/dominicprice/endplay/issues

[options]
package_dir =
    = src
packages = 
    endplay
    endplay._dds
    endplay.dds
    endplay.dealer
    endplay.dealer.actions
    endplay.dealer.actions.templates
    endplay.evaluate
    endplay.experimental
    endplay.interact
    endplay.interact.frontends
    endplay.parsers
    endplay.types
    endplay.stats
    endplay.utils
install_requires = 
    pyparsing
    tqdm
    numpy>=1.16
    matplotlib
zip_safe = False

[options.package_data]
endplay.dealer.actions.templates = preamble.*, postamble.*

[options.entry_points]
console_scripts = 
    endplay-interact = endplay.interact.__main__:main
    endplay-dealer = endplay.dealer.__main__:main